--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <a href="/" style="text-decoration: none;">
     <div class="logo">
         
-            <span class="logo__mark">></span>
+            <span class="logo__mark"> </span>
             <span class="logo__text">/home/b1d0ws</span>
             <span class="logo__cursor" style=
                   "
