--- a/404.html
+++ b/404.html
@@ -82,7 +82,7 @@
         <a href="/" style="text-decoration: none;">
     <div class="logo">
         
-            <span class="logo__mark">></span>
+            <span class="logo__mark"> </span>
             <span class="logo__text">/home/b1d0ws</span>
             <span class="logo__cursor" style=
                   "
