--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="/posts/">posts</a></li><li><a href="/whoami/">whoami</a></li>
+    <ul class="menu__inner"><li><a href="/posts/">posts</a></li><li><a href="/whoami/">whoami</a></li><li><a href="/write-ups/">write-ups</a></li>
     </ul>
 </nav>
 
