--- a/write-ups/anthem-thm/index.html
+++ b/write-ups/anthem-thm/index.html
@@ -128,7 +128,7 @@ I also checked the disallowed entries and found a login page in /umbraco/, so we
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="/posts/">posts</a></li><li><a href="/whoami/">whoami</a></li><li><a href="/write-ups/">write-ups</a></li>
+    <ul class="menu__inner"><li><a href="/certifications/">certifications</a></li><li><a href="/posts/">posts</a></li><li><a href="/write-ups/">write-ups</a></li>
     </ul>
 </nav>
 
