--- a/certifications/ccna/index.html
+++ b/certifications/ccna/index.html
@@ -168,7 +168,7 @@ Quem Sou Eu? Primeiramente, deixe-me ambientar vocês falando um pouco sobre mim
 <p>Exercícios, faça exercícios!! O Gustavo disponibiliza questões para revisão depois de todo conteúdo ensinado e um simulado para cada tópico também. Como a meta é acertar 80% das questões para prosseguir, você “meio que é obrigado” a saber um conteúdo para passar para os outros.</p>
 <p>Nas últimas semanas, eu reassisti todas as aulas e refiz os exercícios para tirar tudo a limpo. Como você já tem as anotações e já absorveu grande parte do conteúdo, dá até pra aumentar a velocidade dos vídeos e não demora muito para passar por tudo de novo.</p>
 <p>Para toda aula assistida, eu fazia anotações e colocava num Word. Na hora de passar a limpo, eu joguei tudo no GitBook, um aplicativo Web que eu uso para deixar meus resumos.</p>
-<p><img src="/gitbook-ccna.png" alt="GitBook CCNA"></p>
+<p><img src="/ccna/gitbook-ccna.png" alt="GitBook CCNA"></p>
 <h2 id="custos">Custos</h2>
 <p>Chegou a hora que todo mundo teme, os valores gastos nessa brincadeira toda! Obter certificações no Brasil sempre foi caro e aqui não foi diferente. A CCNA custa míseros 300$, ou seja, na casa dos R$1600 + impostos.</p>
 <p>Você adquire ela no site da PersonVUE, plataforma responsável pelo agendamento desses tipos de exame. No meu caso, fiz a prova online, mas ela também pode ser presencial. Como a Person é estrangeira, você precisará de um cartão internacional para realizar a transação.</p>
