--- a/write-ups/dreaming-thm/index.html
+++ b/write-ups/dreaming-thm/index.html
@@ -159,7 +159,7 @@ This machine was made by me and my friend Julio. Our Linkedin will be in the end
 <p><br>
 Website is apache default page, so we can enumerate directories with gobuster.</p>
 <p><img src="/dreaming/website.png" alt="apache"></p>
-<p><img src="/dreaming/goBuster.png" alt="gobuster"></p>
+<p><img src="/dreaming/gobuster.png" alt="gobuster"></p>
 <p><br>
 We discover a hidden directory that contains a website CMS called <strong>Pluck</strong>.</p>
 <p><img src="/dreaming/app.png" alt="app"></p>
